# linux.keepAwake

./: .gitignore  Cargo.toml  README.md  install.sh
src/: config.rs  icon.rs  inhibit.rs  main.rs  tray.rs
